# wwn-mcp

./: .gitignore  README.md  corpus.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: contributing.md  corpus.md  deployment.md  mcp-tools.md  overview.md  usage.md
knowledge/: neovim-ios-appstore-compliance.md  zsh-ios-appstore-compliance.md
knowledge/wawona/: fastlane.md  wwn-repos-catalog.md
nix/: module.nix
src/wwn_mcp/: __init__.py  chunk.py  cli.py  config.py  corpus.py  embed.py  fetch.py  index.py  patches.py  server.py  store.py
tests/: test_pipeline.py
